#5: Updated configuration for new Travis CI deployment support. Changed root package from org to com. Cleaned up test Mule config.